# AliluOS

./: Cargo.toml  README.md  x86_64-bare_metal.json
.cargo/: config.toml
src/: allocator.rs  fs.rs  game.rs  interrupts.rs  kernel.rs  keyboard.rs  main.rs  shell.rs  vga.rs
